@startuml

title __EVENTS's Class Diagram__\n

  namespace de.gematik.ti.cardreader.provider.api {
    namespace events {
      abstract class de.gematik.ti.cardreader.provider.api.events.AbstractCardReaderEvent {
          + getCardReader()
          # AbstractCardReaderEvent()
      }
    }
  }
  

  namespace de.gematik.ti.cardreader.provider.api {
    namespace events {
      class de.gematik.ti.cardreader.provider.api.events.CardReaderConnectedEvent {
          + CardReaderConnectedEvent()
          + getInitStatus()
      }
    }
  }
  

  namespace de.gematik.ti.cardreader.provider.api {
    namespace events {
      class de.gematik.ti.cardreader.provider.api.events.CardReaderDisconnectedEvent {
          + CardReaderDisconnectedEvent()
      }
    }
  }
  

  de.gematik.ti.cardreader.provider.api.events.AbstractCardReaderEvent o-- de.gematik.ti.cardreader.provider.api.ICardReader : cardReader
  de.gematik.ti.cardreader.provider.api.events.CardReaderConnectedEvent -up-|> de.gematik.ti.cardreader.provider.api.events.AbstractCardReaderEvent
  de.gematik.ti.cardreader.provider.api.events.CardReaderConnectedEvent o-- de.gematik.ti.cardreader.provider.api.listener.InitializationStatus : initStatus
  de.gematik.ti.cardreader.provider.api.events.CardReaderDisconnectedEvent -up-|> de.gematik.ti.cardreader.provider.api.events.AbstractCardReaderEvent


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
